articles.css
@import "common.css";
@import "_inner-page-common.css";

@media only screen and (max-width: 800px) {
  nav {
    display: none;
  }
}

main a {
  text-decoration: underline;
}



.intro {
  margin-bottom: 100px;
}

.title {
}

.subtitle {
}

.title {
  font-size: 56px;
  font-weight: 700;
}

.subtitle {
  color: #7f7f7f;
  font-size: 30px;
  margin-bottom: 100px;
  font-weight: 300;
}

.subtitle::after,
h2::after {
  margin-top: 20px;
  content: "";
  display: block;
  width: 100px;
  height: 5px;
  background: var(--primary-color);
}

main p {
  line-height: 1.4;
}

h2:not(.subtitle) {
  margin: 1em 0;
}

code:not([class^="language-"]) {
  background: var(--code-background-color);
  font-size: 0.9em;
  padding: 0.1em 0.2em;
  border-radius: 0.2em;
}

code[class^="language-"] {
  font-size: 0.9em;
}

main li {
  margin-bottom: 0.3em;
}

blockquote {
  background: var(--code-background-color);
  margin-left: 0;
  margin-right: 0;
  padding: 1em;
  font-style: italic;
  border-left: 10px solid var(--primary-color);
}

blockquote p:last-child {
  margin-bottom: 0;
}

main img {
  max-width: 100%;
  border: 20px solid var(--secondary-color);
}

.article-teaser {
  display: block;
  font-size: 2rem;
  margin-bottom: 1em;
}

table {
  margin-bottom: 1em;
  border-collapse: collapse;
  font-size: 0.8em;
}

th {
  border-bottom: 2px solid var(--primary-color);
  padding-left: 0 !important;
}

td,
th {
  padding: 10px 15px;
}

td {
  border: 1px solid var(--secondary-color);
}

kbd {
  font-size: 0.8em;
  padding: 0.2em;
  line-height: 1;
  vertical-align: center;
  display: inline-block;
  background: var(--secondary-color);
  border: 1px solid var(--code-background-color);
  font-variant: small-caps;
text-transform: uppercase;
}

